fixed modal animation not showing when closing

--- a/css/style.css
+++ b/css/style.css
@@ -801,6 +801,7 @@ p {
 .modal-backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  transition-delay: calc(var(--anim-time) * 2);
 }
 
 .modal-backdrop.is-hidden .modal-window {
